.sisyphus/evidence/task-w2s1-skeleton-tdd.log
=== RED PHASE ===
bun test v1.3.13 (bf2e2cec)

src/server/app.test.ts:

# Unhandled error between tests
-------------------------------
error: Cannot find module './app' from '/Users/bo/Developer/AI/specra/src/server/app.test.ts'
-------------------------------


src/server/errors.test.ts:

# Unhandled error between tests
-------------------------------
error: Cannot find module './errors' from '/Users/bo/Developer/AI/specra/src/server/errors.test.ts'
-------------------------------


src/server/error-handler.test.ts:

# Unhandled error between tests
-------------------------------
error: Cannot find module './errors' from '/Users/bo/Developer/AI/specra/src/server/error-handler.test.ts'
-------------------------------


src/server/listen.test.ts:

# Unhandled error between tests
-------------------------------
error: Cannot find module './listen' from '/Users/bo/Developer/AI/specra/src/server/listen.test.ts'
-------------------------------


 0 pass
 4 fail
 4 errors
Ran 4 tests across 4 files. [98.00ms]

=== GREEN PHASE ===
bun test v1.3.13 (bf2e2cec)

src/server/app.test.ts:
GET /api/health 200 4ms
GET /api/health 200 0ms
19 | 
20 |     const res = await app.request("/api/health", {
21 |       headers: { Origin: "http://localhost:5173" },
22 |     });
23 | 
24 |     expect(res.headers.get("access-control-allow-origin")).toBe("*");
                                                                ^
error: expect(received).toBe(expected)

Expected: "*"
Received: "http://localhost:5173"

      at <anonymous> (/Users/bo/Developer/AI/specra/src/server/app.test.ts:24:60)
(fail) createServerApp > adds wildcard CORS headers in dev mode [3.49ms]
GET /api/health 401 0ms
GET /api/health 200 0ms

 13 pass
 1 fail
 42 expect() calls
Ran 14 tests across 4 files. [134.00ms]

=== TYPECHECK ===
$ tsc --noEmit
src/server/error-handler.ts(14,7): error TS2769: No overload matches this call.
  Overload 1 of 2, '(object: { error: { details?: {} | null | undefined; code: ServerErrorCode; message: string; }; }, status?: ContentfulStatusCode | undefined, headers?: HeaderRecord | undefined): JSONRespondReturn<...>', gave the following error.
    Argument of type 'number' is not assignable to parameter of type 'ContentfulStatusCode | undefined'.
  Overload 2 of 2, '(object: { error: { details?: {} | null | undefined; code: ServerErrorCode; message: string; }; }, init?: ResponseOrInit<ContentfulStatusCode> | undefined): JSONRespondReturn<...>', gave the following error.
    Argument of type 'number' is not assignable to parameter of type 'ResponseOrInit<ContentfulStatusCode> | undefined'.
src/server/listen.ts(40,5): error TS2322: Type 'number | undefined' is not assignable to type 'number'.
  Type 'undefined' is not assignable to type 'number'.

=== ERROR ROUTE ENVELOPE CHECK ===
no routes dir yet - OK

=== FORBIDDEN PATTERNS CHECK ===
clean

=== GREEN PHASE RETRY ===
bun test v1.3.13 (bf2e2cec)

src/server/app.test.ts:
GET /api/health 200 4ms
GET /api/health 200 0ms
19 | 
20 |     const res = await app.request("/api/health", {
21 |       headers: { Origin: "http://localhost:5173" },
22 |     });
23 | 
24 |     expect(res.headers.get("access-control-allow-origin")).toBe("*");
                                                                ^
error: expect(received).toBe(expected)

Expected: "*"
Received: "http://localhost:5173"

      at <anonymous> (/Users/bo/Developer/AI/specra/src/server/app.test.ts:24:60)
(fail) createServerApp > adds wildcard CORS headers in dev mode [3.18ms]
GET /api/health 401 0ms
GET /api/health 200 0ms

 13 pass
 1 fail
 42 expect() calls
Ran 14 tests across 4 files. [130.00ms]

=== TYPECHECK RETRY ===
$ tsc --noEmit

=== ERROR ROUTE ENVELOPE CHECK RETRY ===
no routes dir yet - OK

=== FORBIDDEN PATTERNS CHECK RETRY ===
clean
